Custom Shift Keys導入の試みなど
Custom Shift Keys導入の爲の追記。
イーハトーヴォ排列導入の爲の書き換へ。
上記いづれも中途段階。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,6 @@
 	    "editor.formatOnSave": false
     },
     "cmake.configureOnOpen": true,
-    "cmake.sourceDirectory": "${workspaceFolder}/lib/googletest"
+    "cmake.sourceDirectory": "${workspaceFolder}/lib/googletest",
+    "makefile.configureOnOpen": false
 }
